# click-mirror

./: .gitignore  .gitlab-ci.yml  README.md  Readme.md  pytest.ini  releaselog.txt
agxClick/: README.md  pyproject.toml  releaselog.txt  requirements.txt  setup.py
agxClick/examples/: click_application.py  scene.py  test_scene.py
agxClick/src/agxClick/: Robot.py  __init__.py  agx_application.py  application_step_listener.py  brick_reader.py  brick_utils.py  click_application.py  click_batch_listener.py  click_event_listener.py  click_robot.py  graphics_throttler.py  keyboard_listener.py  message_factory.py  reset_batch_listener.py
agxClick/testdata/: ClickScene.yml  Example5.yml  MissingProtRefScene.yml  MyDriveTrainRobot.yml  MyRobot.yml  MyScene.yml  MySuctionGripperRobot.yml  SuctionCup.yml  brick.config.yml
agxClick/tests/: agxpytest.py
agxClick/tests/agxClick/: brick_env.py  conftest.py  run_brick.py  test_batch_listener.py  test_brick_env.py  test_brick_reader.py  test_brick_utils.py  test_click_application_integration.py  test_click_integration.py  test_click_robot.py  test_communication_states.py  test_graphics_throttler.py  test_integation_base.py  test_message_factory.py  test_message_factory_integration.py  test_message_factory_with_fake_robot.py  test_wallclock.py
agxclick/: README-pypi.md  README.md  pyproject.toml
agxclick/examples/: click_application.py
agxclick/src/agxclick/: __init__.py  agx_application.py  brick_reader.py  click_application.py  click_event_listener.py  click_robot.py  graphics_throttler.py  keyboard_listener.py  message_factory.py  wallclock.py
agxclick/testdata/: MyRobot.yml  MyScene.yml
agxclick/tests/agxclick/: test_batch_listener.py  test_brick_env.py  test_brick_reader.py  test_brick_utils.py  test_click_application_integration.py  test_click_robot.py  test_integation_base.py  test_integration_clickports.py  test_message_factory.py  test_message_factory_integration.py  test_message_factory_with_fake_robot.py  test_wallclock.py
conan1/: pyproject.toml
conan2/: pyproject.toml
cpp-src/: CMakeLists.txt  conanfile.txt
cpp-src/CMakeModules/: BuildType.cmake  conanconf.cmake  configure_cpack.cmake
cpp-src/click/: CMakeLists.txt  ClickConfig.cmake  conanfile.py
cpp-src/click/conan/: CMakeLists.txt  README.md
cpp-src/click/include/: Messaging.pb.h
cpp-src/click/include/click/: Client.h  ControlMessage.h  ControlMessageBuilder.h  DllExport.h  ErrorMessage.h  ErrorMessageBuilder.h  HandshakeInitMessage.h  HandshakeInitMessageBuilder.h  HandshakeMessage.h  HandshakeMessageBuilder.h  Message.h  MessageFactory.h  MessageSerializer.h  ResetMessage.h  ResetMessageBuilder.h  SensorMessage.h  SensorMessageBuilder.h  SensorRequestMessage.h  SensorRequestMessageBuilder.h  Server.h
cpp-src/click/shared_conf/: ClickConfig.cmake
cpp-src/click/src/: Client.cpp  ControlMessage.cpp  ControlMessageBuilder.cpp  ErrorMessage.cpp  ErrorMessageBuilder.cpp  HandshakeInitMessage.cpp  HandshakeInitMessageBuilder.cpp  HandshakeMessage.cpp  HandshakeMessageBuilder.cpp  Message.cpp  MessageFactory.cpp  MessageSerializer.cpp  Messaging.pb.cc  ResetMessage.cpp  ResetMessageBuilder.cpp  SensorMessage.cpp  SensorMessageBuilder.cpp  SensorRequestMessage.cpp  SensorRequestMessageBuilder.cpp  Server.cpp
cpp-src/click/test_package/: CMakeLists.txt  conanfile.py
cpp-src/click/test_package/src/: example.cpp
cpp-src/click/tests/: CMakeLists.txt  CatchMain.cpp  IntegrationTestClientServer.cpp  IntegrationTestProtobufMessage.cpp  IntegrationtestHandshakeMessage.cpp  IntegrationtestSensorMessage.cpp  TestClient.cpp  TestControlMessage.cpp  TestErrorMessage.cpp  TestHandshakeMessage.cpp  TestInithandshakeMessage.cpp  TestMessage.cpp  TestProtobufMessages.cpp  TestResetMessage.cpp  TestSensorMessage.cpp  TestSensorRequestMessage.cpp  TestSrcDir.cpp  catch_main.cpp  integrationtest_handshake_message.cpp  integrationtest_sensor_message.cpp  test_HandshakeSensorRequest_message.cpp  test_control_message.cpp  test_initHandshake.cpp  test_inithandshake_message.cpp  test_message.cpp  test_message_integration.cpp  test_messages.cpp  test_protobuf_message_integration.cpp  test_protobuf_messages.cpp  test_srcdir.cpp  testpaths.h
cpp-src/client/: CMakeLists.txt
cpp-src/client/include/click/: MessageFactory.h
cpp-src/client/src/: client.cpp
cpp-src/democlient/: CMakeLists.txt
cpp-src/democlient/src/: democlient.cpp  demoserver.cpp
cpp-src/include/: Messaging.ph.h  catch2
cpp-src/src/: CMakeLists.txt  client.cpp
cpp-src/tests/: CMakeLists.txt  test_message_integration.cpp  test_messages.cpp
doc/: messaging.md  performance.md  waspwara-nosync-OSX.profile  waspwara-nosync-win.profile  waspwara-sync-OSX.profile  waspwara-sync-win.profile  waspwara-without-graphics-disableSync_Linux.profile  waspwara-without-graphics-sync_Linux.profile
docker/: Dockerfile.CI  Dockerfile.CI-agx  docker-compose-pytest.yml  docker-compose.yml
integration-tests/: click_integration.py  test_click_integration.py
protobuf-src/: CMakeLists.txt  Messaging.proto
python-src/: README.md  pyproject.toml  requirements-publish.txt  requirements-test.txt  requirements.txt  setup.py
python-src/src/: Messaging_pb2.py  client.py  message_proto_helpers.py  messaging_pb2.py  server.py
python-src/src/pClick/: Messaging_pb2.py  __init__.py  client.py  message_proto_helpers.py  server.py
python-src/src/pClick/demo/: client.py  server.py
python-src/src/pclick/: Messaging_pb2.py  __init__.py  client.py  server.py
python-src/src/pclick/demo/: client.py  server.py
python-src/src/pyClick/: message_proto_helpers.py
python-src/src/pyClick/demo/: client.py  server.py
python-src/tests/: conftest.py  message_proto_helpers.py  test_messaging.py  test_messaging_transform.py
python-src/tests/pClick/: test_messaging.py  test_messaging_transform.py
python-src/tests/pclick/: test_messaging.py
python-src/tests/pyClick/: test_messaging.py  test_messaging_transform.py
