[tool.poetry]
name = "agxclick"
version = "0.3.1"
description = "Controller to AGX Dynamics communication using pclick messaging"
authors = ["Algoryx Simulation <contact@algoryx.se>"]
license = "Apache-2.0"
repository = "https://github.com/algoryx/click-mirror"
readme = "README-pypi.md"
packages = [
    { include = "agxclick", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8"
pclick = ">=0.3.1"
agxBrick = ">=0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
