[tool.poetry]
name = "pclick"
version = "0.3.1"
description = "Controller to AGX Dynamics messaging"
authors = ["Algoryx Simulation <contact@algoryx.se>"]
license = "Apache-2.0"
repository = "https://github.com/algoryx/click-mirror"
readme = "README.md"
packages = [
    { include = "pclick", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8"
protobuf = "3.20.3"
pyzmq = "22.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
