[tool.poetry]
name = "pclick"
version = "0.5.7"
description = "Controller to AGX Dynamics messaging"
authors = ["Algoryx Simulation <contact@algoryx.se>"]
license = "Apache-2.0"
repository = "https://github.com/algoryx/click-mirror"
readme = "README.md"
packages = [
    { include = "pclick", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8"
# 4.21.12 is compatible with protobuf 3.21.12
protobuf = "4.21.12"
pyzmq = "26.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
